# logasync

./: CMakeLists.txt  README.md  common.h  logger.h  main.cpp  sgimglog.h
.cache/clangd/index/: ansicolor_sink-inl.h.CC3C3D1C9C89D67A.idx  ansicolor_sink.h.2896017E5A41507F.idx  backtracer-inl.h.2A61250EAEB88BDB.idx  backtracer.h.B24A99AB52EB3AB0.idx  base_sink-inl.h.23C7939F1B2DDAA1.idx  base_sink.h.A10D630B093F6DDB.idx  circular_q.h.2039824B656F0B24.idx  common-inl.h.6B78BBE85F4D88A9.idx  common.h.FD7478D0C3A32A46.idx  common.h.FF402190F82C5472.idx  console_globals.h.09E4B4353FE0BB53.idx  core.h.0EE3A5A63E62AFF1.idx  file_helper-inl.h.F3A86AB4C574DB03.idx  file_helper.h.BC701D760881CA72.idx  fmt.h.77989D106A527B18.idx  fmt_helper.h.67D6AA77396BC1FC.idx  format-inl.h.28FA3F6D19F6F15A.idx  format.h.58CFD9BACBA57184.idx  formatter.h.3AD0F7DD4E8243F6.idx  formatter.h.C92E88442D108BA2.idx  log_msg-inl.h.041AACDE08D20DE2.idx  log_msg.h.2AD33DC6DF3F5ED4.idx  log_msg_buffer-inl.h.EF11B16F99076499.idx  log_msg_buffer.h.341D119E45F27063.idx  logger-inl.h.63219461640FE75F.idx  logger.h.8DE89904B6BEEC9B.idx  logger.h.E33161750882FA4E.idx  logger.h.EB176AB2D4B1F28E.idx  logger_base.h.5D09E83FA1F867F6.idx  logger_base.h.890EF5BD94541460.idx  main.cpp.4C66D0D83745EE6D.idx  null_mutex.h.1051777814E67C85.idx  os-inl.h.2DEE3317763646F1.idx  os.h.AA58FDEC43E5F5B9.idx  registry.h.73DDDC0B5E3F6A21.idx  (+16 more)
details/misc/: spin_lock.h
sglogger/: CMakeLists.txt  formatter.h  logger.h  logger_base.h
sglogger/sglogger/: common.h  logger.h  logger_base.h
sinks/: sink.h
spdlog/: CMakeLists.txt
